--- a/stars-temerature-prediction.ipynb
+++ b/stars-temerature-prediction.ipynb
@@ -67,18 +67,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
+    "import random\n",
     "import pandas as pd\n",
+    "import numpy as np\n",
     "import seaborn as sns\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
     "from os import path\n",
     "from ydata_profiling import ProfileReport\n",
     "\n",
-    "from fuzzywuzzy import fuzz"
+    "from fuzzywuzzy import fuzz\n",
+    "\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.preprocessing import StandardScaler"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import torch\n",
+    "import torch.nn as nn"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Устройство для PyTorch: cuda\n"
+     ]
+    }
+   ],
+   "source": [
+    "device = 'cuda' if torch.cuda.is_available() else 'cpu'\n",
+    "print('Устройство для PyTorch:', device)"
    ]
   },
   {
@@ -90,12 +123,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
     "PATH_LOCAL_DATA = './datasets/6_class.csv'\n",
-    "PATH_CLOUD_DATA = '/datasets/6_class_csv'"
+    "PATH_CLOUD_DATA = '/datasets/6_class_csv'\n",
+    "RND = 1337 # random state"
    ]
   },
   {
@@ -107,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -255,9 +289,94 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "49c4b1e85a0e487b9b1e1d4042723692",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Summarize dataset:   0%|          | 0/5 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "f9eee661afe04950a92b587048869a5d",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Generate report structure:   0%|          | 0/1 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "e47260f0d8084890b12f263be45271fc",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Render widgets:   0%|          | 0/1 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "54a27e053e3243dc952bed5452e11d5a",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "VBox(children=(Tab(children=(Tab(children=(GridBox(children=(VBox(children=(GridspecLayout(children=(HTML(valu…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "9a92095679f14ce6bf69cae74f0a5a50",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Render HTML:   0%|          | 0/1 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "04b0aa69e00b4eed8e3504f47d454d98",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Export report to file:   0%|          | 0/1 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "if 'df_profile' in globals():\n",
     "    pass\n",
@@ -297,7 +416,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -334,7 +453,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -350,7 +469,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -368,7 +487,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -396,7 +515,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -407,7 +526,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -429,7 +548,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -442,7 +561,7 @@
        "       'Blue-White'], dtype=object)"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -470,7 +589,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -490,7 +609,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -721,7 +840,7 @@
        "18          Blue-White      0       1         0         0        1"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -746,7 +865,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -842,7 +961,7 @@
        "2      1       0         0         0        0  "
       ]
      },
-     "execution_count": 64,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -856,7 +975,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -948,7 +1067,7 @@
        "2         0         0        0  "
       ]
      },
-     "execution_count": 65,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -963,7 +1082,327 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Чтобы избежать утечки целевого признака в тестовую выборку, будет стандартизировать данные уже после того, как разделим выборки на тренировочную и тестовую"
+    "Чтобы избежать утечки целевого признака в тестовую выборку, будем стандартизировать данные уже после того, как разделим выборки на тренировочную и тестовую"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Подготовка выборок"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Разделение выборок и скалирование"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(180, 9)\n",
+      "(60, 9)\n",
+      "(180,)\n",
+      "(60,)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# разделяем датасет и скалируем цифровые признаки\n",
+    "target_feature = \"temperature\"\n",
+    "stratify_features = [\"star_type\"]\n",
+    "\n",
+    "df_X, df_y = df.drop(columns=[target_feature]).copy(), df[target_feature].copy()\n",
+    "X_train, X_test, y_train, y_test = train_test_split(df_X, df_y, test_size=0.25, stratify=df_X[stratify_features], random_state=RND)\n",
+    "\n",
+    "for s in X_train, X_test, y_train, y_test:\n",
+    "    print(s.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>luminosity</th>\n",
+       "      <th>radius</th>\n",
+       "      <th>abs_magnitude</th>\n",
+       "      <th>star_type</th>\n",
+       "      <th>c_red</th>\n",
+       "      <th>c_blue</th>\n",
+       "      <th>c_yellow</th>\n",
+       "      <th>c_orange</th>\n",
+       "      <th>c_white</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>221</th>\n",
+       "      <td>1.378139</td>\n",
+       "      <td>-0.309055</td>\n",
+       "      <td>-1.065849</td>\n",
+       "      <td>0.87831</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>225</th>\n",
+       "      <td>0.736672</td>\n",
+       "      <td>-0.367767</td>\n",
+       "      <td>-1.106434</td>\n",
+       "      <td>0.87831</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>215</th>\n",
+       "      <td>0.433145</td>\n",
+       "      <td>-0.445586</td>\n",
+       "      <td>-0.814788</td>\n",
+       "      <td>0.29277</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>97</th>\n",
+       "      <td>-0.601586</td>\n",
+       "      <td>-0.455169</td>\n",
+       "      <td>-0.172980</td>\n",
+       "      <td>0.29277</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>67</th>\n",
+       "      <td>-0.601634</td>\n",
+       "      <td>-0.457613</td>\n",
+       "      <td>1.149335</td>\n",
+       "      <td>-1.46385</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     luminosity    radius  abs_magnitude  star_type  c_red  c_blue  c_yellow  \\\n",
+       "221    1.378139 -0.309055      -1.065849    0.87831      0       1         0   \n",
+       "225    0.736672 -0.367767      -1.106434    0.87831      0       1         0   \n",
+       "215    0.433145 -0.445586      -0.814788    0.29277      0       1         0   \n",
+       "97    -0.601586 -0.455169      -0.172980    0.29277      0       0         1   \n",
+       "67    -0.601634 -0.457613       1.149335   -1.46385      1       0         0   \n",
+       "\n",
+       "     c_orange  c_white  \n",
+       "221         0        0  \n",
+       "225         0        0  \n",
+       "215         0        0  \n",
+       "97          0        1  \n",
+       "67          0        0  "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>luminosity</th>\n",
+       "      <th>radius</th>\n",
+       "      <th>abs_magnitude</th>\n",
+       "      <th>star_type</th>\n",
+       "      <th>c_red</th>\n",
+       "      <th>c_blue</th>\n",
+       "      <th>c_yellow</th>\n",
+       "      <th>c_orange</th>\n",
+       "      <th>c_white</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>109</th>\n",
+       "      <td>1.494120</td>\n",
+       "      <td>-0.326669</td>\n",
+       "      <td>-0.949757</td>\n",
+       "      <td>0.87831</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>136</th>\n",
+       "      <td>-0.601634</td>\n",
+       "      <td>-0.457322</td>\n",
+       "      <td>0.675529</td>\n",
+       "      <td>-0.87831</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>-0.601634</td>\n",
+       "      <td>-0.457576</td>\n",
+       "      <td>1.243719</td>\n",
+       "      <td>-1.46385</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>237</th>\n",
+       "      <td>2.598517</td>\n",
+       "      <td>2.327102</td>\n",
+       "      <td>-1.416012</td>\n",
+       "      <td>1.46385</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>123</th>\n",
+       "      <td>-0.601634</td>\n",
+       "      <td>-0.457609</td>\n",
+       "      <td>1.193696</td>\n",
+       "      <td>-1.46385</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     luminosity    radius  abs_magnitude  star_type  c_red  c_blue  c_yellow  \\\n",
+       "109    1.494120 -0.326669      -0.949757    0.87831      0       1         0   \n",
+       "136   -0.601634 -0.457322       0.675529   -0.87831      1       0         0   \n",
+       "8     -0.601634 -0.457576       1.243719   -1.46385      1       0         0   \n",
+       "237    2.598517  2.327102      -1.416012    1.46385      0       0         0   \n",
+       "123   -0.601634 -0.457609       1.193696   -1.46385      1       0         0   \n",
+       "\n",
+       "     c_orange  c_white  \n",
+       "109         0        0  \n",
+       "136         0        0  \n",
+       "8           0        0  \n",
+       "237         0        1  \n",
+       "123         0        0  "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "# скалирование признаков\n",
+    "# признак star_type тоже скалируем\n",
+    "\n",
+    "scale_features = ['luminosity', 'radius', 'abs_magnitude', 'star_type']\n",
+    "\n",
+    "scaler = StandardScaler()\n",
+    "scaler.fit(X_train[scale_features])\n",
+    "\n",
+    "for i in X_train, X_test:\n",
+    "    i[scale_features] = scaler.transform(i[scale_features])\n",
+    "    display(i.head())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Создание тезоров"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_train = torch.FloatTensor(X_train.values)\n",
+    "X_test = torch.FloatTensor(X_test.values)\n",
+    "y_train = torch.FloatTensor(y_train.values)\n",
+    "y_test = torch.FloatTensor(y_test.values)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Предварительный вывод"
    ]
   },
   {
@@ -972,6 +1411,26 @@
    "source": [
     "# Построение базовой нейронной сети"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# постараемся зафиксировать хоть какой-то рандом\n",
+    "random.seed(RND)\n",
+    "np.random.seed(RND)\n",
+    "torch.manual_seed(RND)\n",
+    "torch.use_deterministic_algorithms(True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
