--- a/stars-temerature-prediction.ipynb
+++ b/stars-temerature-prediction.ipynb
@@ -1427,6 +1427,151 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 163,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# некоторые гиперпараметры\n",
+    "base_neurons = [9, 18, 10, 10, 6, 1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 208,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# baseline model\n",
+    "\n",
+    "class BaselineModel(nn.Module):\n",
+    "    def __init__(self, neurons: list):\n",
+    "        super(BaselineModel, self).__init__()\n",
+    "\n",
+    "        self.fc1 = nn.Linear(neurons[0], neurons[1])\n",
+    "        self.bn1 = nn.BatchNorm1d(neurons[1])\n",
+    "        self.ac1 = nn.Sigmoid()\n",
+    "\n",
+    "        self.fc2 = nn.Linear(neurons[1], neurons[2])\n",
+    "        self.bn2 = nn.BatchNorm1d(neurons[2])\n",
+    "        self.ac2 = nn.ReLU()\n",
+    "\n",
+    "        self.fc3 = nn.Linear(neurons[2], neurons[3])\n",
+    "        self.bn3 = nn.BatchNorm1d(neurons[3])\n",
+    "        self.ac3 = nn.LeakyReLU()\n",
+    "\n",
+    "        self.fc4 = nn.Linear(neurons[3], neurons[4])\n",
+    "        self.bn4 = nn.BatchNorm1d(neurons[4])\n",
+    "        self.ac4 = nn.ReLU()\n",
+    "\n",
+    "        self.fc5 = nn.Linear(neurons[4], neurons[5])\n",
+    "        # self.bn5 = nn.BatchNorm1d(neurons[5])\n",
+    "        # self.ac5 = nn.Tanh()\n",
+    "    \n",
+    "    def forward(self, x):\n",
+    "\n",
+    "        out = self.fc1(x)\n",
+    "        out = self.bn1(out)\n",
+    "        out = self.ac1(out)\n",
+    "\n",
+    "        out = self.fc2(out)\n",
+    "        out = self.bn2(out)\n",
+    "        out = self.ac2(out)\n",
+    "\n",
+    "        out = self.fc3(out)\n",
+    "        out = self.bn3(out)\n",
+    "        out = self.ac3(out)\n",
+    "\n",
+    "        out = self.fc4(out)\n",
+    "        out = self.bn4(out)\n",
+    "        out = self.ac4(out)\n",
+    "\n",
+    "        out = self.fc5(out)\n",
+    "        # out = self.bn5(out)\n",
+    "        # out = self.ac5(out)\n",
+    "\n",
+    "        return out"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 229,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "base_lr = 0.005\n",
+    "base_epochs = 1000\n",
+    "base_model = BaselineModel(base_neurons)\n",
+    "base_loss = nn.L1Loss()\n",
+    "base_optim = torch.optim.Adam(base_model.parameters(), lr=base_lr)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 243,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Эпоха 0\n",
+      "Текущий лосс 619.4979248046875\n",
+      "Лосс на тесте 3150.465087890625\n",
+      "Эпоха 100\n",
+      "Текущий лосс 555.3797607421875\n",
+      "Лосс на тесте 3120.525634765625\n",
+      "Эпоха 200\n",
+      "Текущий лосс 623.1708984375\n",
+      "Лосс на тесте 3404.85302734375\n",
+      "Эпоха 300\n",
+      "Текущий лосс 642.0732421875\n",
+      "Лосс на тесте 3335.1259765625\n",
+      "Эпоха 400\n",
+      "Текущий лосс 554.6880493164062\n",
+      "Лосс на тесте 3137.09423828125\n",
+      "Эпоха 500\n",
+      "Текущий лосс 541.9041748046875\n",
+      "Лосс на тесте 3101.415283203125\n",
+      "Эпоха 600\n",
+      "Текущий лосс 508.7616271972656\n",
+      "Лосс на тесте 3339.630126953125\n",
+      "Эпоха 700\n",
+      "Текущий лосс 535.0487670898438\n",
+      "Лосс на тесте 3211.609375\n",
+      "Эпоха 800\n",
+      "Текущий лосс 535.065185546875\n",
+      "Лосс на тесте 3122.84521484375\n",
+      "Эпоха 900\n",
+      "Текущий лосс 576.3875122070312\n",
+      "Лосс на тесте 3318.083740234375\n",
+      "Эпоха 999\n",
+      "Текущий лосс 582.9127197265625\n",
+      "Лосс на тесте 3111.12451171875\n"
+     ]
+    }
+   ],
+   "source": [
+    "for e in range(base_epochs):\n",
+    "    base_optim.zero_grad()\n",
+    "    preds = base_model.forward(X_train).flatten()\n",
+    "    loss_value = base_loss(preds, y_train)\n",
+    "    loss_value.backward()\n",
+    "    base_optim.step()\n",
+    "\n",
+    "    # проверка на тестовой\n",
+    "    if e % 100 == 0 or e == base_epochs - 1:\n",
+    "        base_model.eval()\n",
+    "        print(\"Эпоха\", e)\n",
+    "        print(\"Текущий лосс\", loss_value.item())\n",
+    "        test_preds = base_model.forward(X_test).flatten()\n",
+    "        test_loss = base_loss(test_preds, y_test)\n",
+    "        print(\"Лосс на тесте\", test_loss.item())\n",
+    "        # print(\"RMSE на тесте\", test_loss.sqrt().item())\n",
+    "        base_model.train()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
